--- a/Example/DZATimer/Main.storyboard
+++ b/Example/DZATimer/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="whP-gf-Uak">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="whP-gf-Uak">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,8 +16,74 @@
                     <view key="view" contentMode="scaleToFill" id="TpU-gO-2f1">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bez-tM-fnJ">
+                                <rect key="frame" x="241" y="56" width="118" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="5gB-OY-Oo6"/>
+                                    <constraint firstAttribute="width" constant="118" id="ZRE-eK-vuA"/>
+                                </constraints>
+                                <state key="normal" title="Play">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="playPauseTouchUpInside:" destination="whP-gf-Uak" eventType="touchUpInside" id="sOf-8W-Jsj"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g4k-B7-zAy">
+                                <rect key="frame" x="241" y="100" width="118" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="4g5-vd-Gy2"/>
+                                </constraints>
+                                <state key="normal" title="Stop">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="stopTouchUpInside:" destination="whP-gf-Uak" eventType="touchUpInside" id="O45-7k-UZ4"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HjM-Xt-Q19">
+                                <rect key="frame" x="177" y="172" width="246" height="69"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="246" id="4LB-hM-jXb"/>
+                                    <constraint firstAttribute="height" constant="69" id="XK6-Sf-gbm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timer will continue running even if the application is in background" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JfS-dz-OW9">
+                                <rect key="frame" x="45" y="249" width="511" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Bez-tM-fnJ" firstAttribute="trailing" secondItem="g4k-B7-zAy" secondAttribute="trailing" id="92U-z5-BFK"/>
+                            <constraint firstItem="g4k-B7-zAy" firstAttribute="centerX" secondItem="TpU-gO-2f1" secondAttribute="centerX" id="AXg-0g-GTt"/>
+                            <constraint firstAttribute="centerX" secondItem="JfS-dz-OW9" secondAttribute="centerX" id="ItR-ef-XcS"/>
+                            <constraint firstAttribute="trailing" secondItem="JfS-dz-OW9" secondAttribute="trailing" constant="44" id="K7d-ZK-t2g"/>
+                            <constraint firstItem="g4k-B7-zAy" firstAttribute="centerX" secondItem="HjM-Xt-Q19" secondAttribute="centerX" id="WgZ-mC-X1K"/>
+                            <constraint firstItem="JfS-dz-OW9" firstAttribute="leading" secondItem="TpU-gO-2f1" secondAttribute="leading" constant="45" id="cQi-RI-7nm"/>
+                            <constraint firstAttribute="centerX" secondItem="HjM-Xt-Q19" secondAttribute="centerX" id="d1z-4u-P7q"/>
+                            <constraint firstItem="JfS-dz-OW9" firstAttribute="top" secondItem="HjM-Xt-Q19" secondAttribute="bottom" constant="8" id="ioL-1A-NpS"/>
+                            <constraint firstItem="g4k-B7-zAy" firstAttribute="top" secondItem="Bez-tM-fnJ" secondAttribute="bottom" constant="14" id="l4S-M3-GLS"/>
+                            <constraint firstItem="g4k-B7-zAy" firstAttribute="leading" secondItem="Bez-tM-fnJ" secondAttribute="leading" id="pvT-4r-2CU"/>
+                            <constraint firstItem="Bez-tM-fnJ" firstAttribute="top" secondItem="uEw-UM-LJ8" secondAttribute="bottom" constant="36" id="rpD-5I-XHj"/>
+                            <constraint firstItem="HjM-Xt-Q19" firstAttribute="top" secondItem="g4k-B7-zAy" secondAttribute="bottom" constant="42" id="yMj-Yo-RoD"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="WgZ-mC-X1K"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="playButton" destination="Bez-tM-fnJ" id="b0l-Ka-Jtk"/>
+                        <outlet property="timerLabel" destination="HjM-Xt-Q19" id="RWs-Cw-q2O"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tc2-Qw-aMS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
